--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,4 @@
-// http://ionicframework.com/docs/theming/
+// http://ionicframework.com/docs/v2/theming/
 
 
 // App Global Sass
@@ -14,3 +14,87 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.bg-menu{
+  background-color: #00cc66;
+}
+
+.bg-itens{
+  background-color: #99ff99;
+}
+
+.box-menu{
+  background-color: #008000;  
+  height: 150px;
+  width: 240px;
+}
+
+.menu-inner{
+  width: 240px;
+}
+
+.menu-content.bg-menu.content.content-md{
+  width: 240px;
+}
+
+.item.item-block.item-md{
+  height: 105px;
+  align-items: center;
+	background: transparent;
+}
+
+.icon-monkey {
+    text-align: center;
+    position: relative;
+    font-size: 300%;
+    display: block;
+    height: 50%;
+}
+.text-bloco{ 
+    text-align: center;
+    display: block;
+}
+
+.img-ovelha {
+  background-image: url('../assets/img/icon.png');
+  -webkit-background-image: url('../assets/img/icon.png');
+  background-repeat: no-repeat fixed center;
+  background-size: cover;
+}
+
+//--- A V A T A R -----//
+.wrapper {
+  position: relative;
+  text-align: center;
+}
+
+.item-avatar {
+    left: 30%;
+    top: 10%;
+    width: 100px;
+//    height: 80%;
+    position:absolute;
+    border-radius: 50%;
+    display: inline-block;
+    border: 2px solid #fff;    
+    box-shadow: 2px 6px 6px 2px rgba(0,0,0,.26);
+    background-color: #e68a00;
+  }
+
+.name {
+  bottom: -8%;
+  color: white;
+  font-size: 1.25em;
+  margin-left: 24%;
+  text-align: center;    
+  position: absolute;
+  display: block;
+}
+
+.email {
+  color: white;
+  font-size: 1em;
+
+  height: 20px;
+  background-color: #e68a00;
+}
