--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -13,7 +13,7 @@
 .texto-logo{
   padding: 4%;
   opacity: 0.7;
-  color: #fff;
+  color: #000;
   display: block;
   font-size: 130%;
   margin-bottom: 5%;
